--- a/content/cp2022H1.html
+++ b/content/cp2022H1.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換-1.html'>溫度轉換-1</a></li></li></ul></ul><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='溫度轉換-2.html'>溫度轉換-2</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></li></ul></ul><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">溫度轉換-2 << <a href='溫度轉換-2.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>cp2022H1</h1>
+    <div id="tipue_search_content">溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="./../downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="./../downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
 <p>亦即將所有對應的 html 也使用 Brython 產生, 然後寫為 <a href="https://docs.python.org/3/tutorial/classes.html">class</a> 後, 在範例導入時透過 <a href="https://docs.python.org/3/tutorial/classes.html#instance-objects">instance</a> 引用.</p>
@@ -403,7 +403,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
-<br />溫度轉換-2 << <a href='溫度轉換-2.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
+<br />溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
       <div class="container">
