--- a/content/溫度轉換.html
+++ b/content/溫度轉換.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換-1.html'>溫度轉換-1</a></li></li></ul></ul><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='溫度轉換-2.html'>溫度轉換-2</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></li></ul></ul><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">溫度轉換-1 << <a href='溫度轉換-1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w5</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py">w5 passwod generator</a></p>
-<br />溫度轉換-1 << <a href='溫度轉換-1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
+    <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>溫度轉換</h1>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py">w13溫度轉換程式</a>ex1</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py">w13溫度轉換程式</a>ex2</p>
+<br />W13 << <a href='W13.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
       <div class="container">
