--- a/content/About.html
+++ b/content/About.html
@@ -145,7 +145,7 @@ img.add_border {
 <p>           <img alt="" height="195" src="./../images/20220412005788.jpg" width="253"/>    </p>
 <p>仔細看這個男人太狠了他居然把網頁名稱取得這麼中二,還把<span>現任臺北市市長的照片放在首頁</span></p>
 <p>41123147蔡承翰</p>
-<p><span>此網站使用</span><span> stud 伺服器編寫</span></p>
+<p><span>此網站使用</span><span> stud.cycu.org編寫</span></p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <br /> <a href='HW.html'>Next</a> >> HW</div>
